# fitness

./: .env.example  .gitignore  README.md  app.py  index.html  logout.html  models.py  package.json  pyproject.toml  requirements.txt  setup.py  workout-active.html  workout-generation.html  workout-plan.html  workout.html
fitness-tracker/: package-lock.json  package.json
instance/: fitness_tracker.db
src/: App.jsx
